tests/baselines/reference/genericTypeAssertions1.errors.txt
tests/cases/compiler/genericTypeAssertions1.ts(3,5): error TS2322: Type 'A<number>' is not assignable to type 'A<string>'.
  Type 'number' is not assignable to type 'string'.
tests/cases/compiler/genericTypeAssertions1.ts(4,5): error TS2322: Type 'A<A<number>>' is not assignable to type 'A<number>'.
  Type 'A<number>' is not assignable to type 'number'.
tests/cases/compiler/genericTypeAssertions1.ts(4,21): error TS2352: Conversion of type 'A<number>' to type 'A<A<number>>' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
  Type 'number' is not comparable to type 'A<number>'.


==== tests/cases/compiler/genericTypeAssertions1.ts (3 errors) ====
    class A<T> { foo(x: T) { }}
    var foo = new A<number>();
    var r: A<string> = <A<number>>new A(); // error
        ~
!!! error TS2322: Type '{|A|0|}<number>' is not assignable to type '{|A|1|}<string>'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/compiler/genericTypeAssertions1.ts:1:7
!!! annotated symbol 1 tests/cases/compiler/genericTypeAssertions1.ts:1:7
    var r2: A<number> = <A<A<number>>>foo; // error
        ~~
!!! error TS2322: Type '{|A|0|}<{|A|1|}<number>>' is not assignable to type '{|A|2|}<number>'.
!!! error TS2322:   Type '{|A|3|}<number>' is not assignable to type 'number'.
!!! annotated symbol 0 tests/cases/compiler/genericTypeAssertions1.ts:1:7
!!! annotated symbol 1 tests/cases/compiler/genericTypeAssertions1.ts:1:7
!!! annotated symbol 2 tests/cases/compiler/genericTypeAssertions1.ts:1:7
!!! annotated symbol 3 tests/cases/compiler/genericTypeAssertions1.ts:1:7
                        ~~~~~~~~~~~~~~~~~
!!! error TS2352: Conversion of type '{|A|0|}<number>' to type '{|A|1|}<{|A|2|}<number>>' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
!!! error TS2352:   Type 'number' is not comparable to type '{|A|3|}<number>'.
!!! annotated symbol 0 tests/cases/compiler/genericTypeAssertions1.ts:1:7
!!! annotated symbol 1 tests/cases/compiler/genericTypeAssertions1.ts:1:7
!!! annotated symbol 2 tests/cases/compiler/genericTypeAssertions1.ts:1:7
!!! annotated symbol 3 tests/cases/compiler/genericTypeAssertions1.ts:1:7